Se le dio diseño el sitio web

--- a/content/acerca.html
+++ b/content/acerca.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca de - Beautiful</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
     <header>
@@ -19,10 +19,13 @@
         </nav>
     </header>
     <main>
-        <h2>Conoce más sobre Nosotros</h2>
+        <h2>¡Conoce más sobre Nosotros!</h2>
         <p> BEAUTIFUL es un salón dedicado a ofrecer los mejores servicios de belleza en un ambiente relajante y profesional.</p>
-        <img src="../images/equipo.jpg" alt="equipo" height="200" width="350" />
-        <table border="1">
+        <img src="../images/equipo.jpg" alt="equipo" height="200" width="350" />         
+        <img src="../images/estilo.jfif" alt="estilo" height="200" width="350" />
+
+        <table border="1" height="550%" width="50%">
+
             <br />
             <br />
             <thead>
@@ -41,6 +44,12 @@
                     <td>Colorista</td>
                     <td>8</td>
                 </tr>
+                <tr>
+                    <td>Clari Díaz</td>
+                    <td>Manicure y pedicure</td>
+                    <td>8</td>
+                </tr>
+
             </thead>
         </table>
     </main>
