--- a/content/tematica.html
+++ b/content/tematica.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temática</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
     <header>
@@ -19,13 +19,31 @@
         </nav>
     </header>
     <section id="tematica">
-        <h2>Temática</h2>
+        <h1>Nuestra Historia</h1>
         <p>
-            Ambiente: En BEAUTIFUL, nos enorgullece ofrecer un ambiente acogedor y relajante donde cada cliente puede disfrutar de un servicio personalizado. Nuestro salón está diseñado para proporcionar una experiencia de belleza lujosa y cómoda, con un equipo de profesionales dedicados a realzar tu belleza y bienestar.
+            En BEAUTIFUL, creemos que la belleza es una forma de arte. Fundado en [2013], nuestro salón ha sido un refugio para aquellos que buscan realzar su belleza natural. Desde nuestros humildes comienzos, hemos crecido gracias a la pasión y dedicación de nuestro equipo, siempre enfocados en ofrecer un servicio excepcional y personalizado.
+        </p>
+        <img src="../images/tematica.webp" alt="tematica" height="200" width="250" />
 
-            <a href="https://www.belleciia.com/belleza/salon-de-belleza/" src="images/salon.webp" alt="salon">
+        <h2>Nuestra Misión</h2>
+        <p>
+            En BEAUTIFUL, nuestra misión es proporcionar una experiencia de belleza única y personalizada. Nos esforzamos por crear un ambiente acogedor y relajante donde cada cliente pueda sentirse cómodo y valorado. Creemos en la importancia de la autoexpresión y trabajamos para ayudar a cada persona a encontrar su estilo único.
+        </p>
+        <img src="../images/mision.jpg" alt="mision" height="200" width="250" />
+
+        <h2>Nuestros valores</h2>
+        <p>
+        <p> <b>Calidad:</b> Utilizamos productos de alta calidad y técnicas avanzadas para asegurar resultados excepcionales.</p>
+        <p> <b>Innovación:</b> Nos mantenemos al día con las últimas tendencias y tecnologías en el mundo de la belleza.</p>
+        <p> <b>Atención al Cliente:</b> Cada cliente es especial para nosotros, y nos esforzamos por ofrecer un servicio personalizado y atento.</p>
+        <p> <b>Sostenibilidad:</b> Nos comprometemos a prácticas sostenibles y responsables con el medio ambiente.</p>
+        </p>
+        <img src="../images/atencion.jpg" alt="atencion" height="200" width="250" />
+
+        <p>
+            <a href="https://www.versum.com/m/mx/blog/3-preguntas-tipicas-que-hacen-los-clientes-de-salones-de-belleza-y-como-responder-a-ellas/" src="images/atencion.jpg" alt="mision">
                 <h2>Más información:</h2>
-           </a>
+            </a>
         </p>
     </section>
     <footer>
