--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
     <section id="inicio">
         <h1>Bienvenidos al salón de belleza "Beautiful"</h1>
         <div class="banner">
-            <img src="images/banner.jpg" alt="banner">
+            <img src="images/banner.jpg" alt="banner" height="1000" width="1000">
         </div>
         <div class="cards">
             <div class="card">
-                <a href="https://www.freepik.es/fotos-vectores-gratis/beautifull-beauty" src="images/belleza.avif" alt="belleza">
+                <a href="https://www.freepik.es/fotos-vectores-gratis/beautifull-beauty" >
+                    <img src="images/belleza.avif" alt="belleza" height="600" width="600">
                     <h2>Servicios disponibles:</h2>
                     <p>Corte de cabello de todo estilo.</p>
                     <p>Alisados.</p>
@@ -36,6 +37,7 @@
             </div>
         </div>
     </section>
+
 
 
     <footer>
